# cppGui

./: .gitignore  CMakeLists.txt  main.cpp  payloadEnums.hpp  window.cpp  window.h  window.ui  workerThread.cpp  workerThread.h
